# krust

./: Cargo.toml  ENGINEERING.md  LICENSE  README.md  REVIEW-001.md
.github/workflows/: ci.yml
crates/agent-eval/: Cargo.toml
crates/agent-eval/src/: lib.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: lib.rs  registry.rs  tool.rs
crates/agent-web/: Cargo.toml
crates/agent-web/src/: action.rs  backend.rs  cdp.rs  evidence.rs  lib.rs  page.rs  tools.rs
crates/ember-mcp/: Cargo.toml
crates/ember-mcp/src/: main.rs
crates/krust-mcp/: Cargo.toml
crates/krust-mcp/src/: main.rs
crates/protocol-core/: Cargo.toml
crates/protocol-core/src/: artifact.rs  checkpoint.rs  error.rs  intent.rs  lib.rs  policy.rs  state.rs
scripts/setup/: linux-secrets.sh  macos-keychain.sh  onepassword.sh
