[workspace]
resolver = "2"
members = [
    "crates/protocol-core",
    "crates/agent-web",
    "crates/agent-tools",
    "crates/agent-eval",
    "crates/krust-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/abbudjoe/krust"
description = "Verified execution protocols for AI agents"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
rmcp = { version = "0.8", features = ["server", "transport-io"] }
schemars = "1"
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
futures = "0.3"
base64 = "0.22"
