[package]
name = "krust-agent-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Evaluation harness and reliability metrics for agent execution"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
krust-protocol-core = { path = "../protocol-core" }
