[package]
name = "krust-agent-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Web interaction abstractions and browser backends for AI agents"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chromiumoxide = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
which = { workspace = true }
krust-protocol-core = { path = "../protocol-core" }
krust-agent-tools = { path = "../agent-tools" }
