[package]
name = "ember-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server binary — expose Ember tools to any MCP-compatible agent"

[[bin]]
name = "ember-mcp"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
async-trait = { workspace = true }
rmcp = { workspace = true, features = ["server", "client", "transport-io"] }
schemars = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
ember-protocol-core = { path = "../protocol-core" }
ember-agent-web = { path = "../agent-web" }
ember-agent-tools = { path = "../agent-tools" }
