[package]
name = "krust-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server binary — expose Krust tools to any MCP-compatible agent"

[[bin]]
name = "krust-mcp"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
async-trait = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-io"] }
schemars = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
krust-protocol-core = { path = "../protocol-core" }
krust-agent-web = { path = "../agent-web" }
krust-agent-tools = { path = "../agent-tools" }
