[package]
name = "krust-protocol-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "State machine, typed intents, artifact contracts, and policy engine for AI agent execution"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
